--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -42,7 +42,7 @@ import DarkModeToggle from "@components/DarkModeToggle.astro";
               <li class:list={["li", { dropdown: entry.children?.length > 0 }]}>
                 {entry.children?.length > 0 ? (
                   // If entry has children in navData.json, create a button and a dropdown icon
-                  <button
+                  <span
                     aria-expanded="false"
                     aria-controls={`submenu-${entry.key}`}
                     class:list={[
@@ -51,8 +51,8 @@ import DarkModeToggle from "@components/DarkModeToggle.astro";
                     ]}
                   >
                     {entry.key}
-                    <Icon name="mdi--caret" class="drop-icon" />
-                  </button>
+                    <Icon name="dropdown" class="drop-icon" />
+                  </span>
                 ) : (
                   // If entry does not have children in navData.json, create an anchor
                   <a
@@ -100,723 +100,3 @@ import DarkModeToggle from "@components/DarkModeToggle.astro";
     <DarkModeToggle />
   </div>
 </header>
-
-<style lang="less">
-  /*-- -------------------------- -->
-<---     Mobile Navigation      -->
-<--- -------------------------- -*/
-
-  /* Mobile - 1023px */
-  @media only screen and (max-width: 63.9375rem) {
-    body {
-      &.open {
-        overflow: hidden;
-      }
-    }
-
-    #navigation {
-      /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
-      font-family: "Roboto", "Arial", sans-serif;
-      width: 100%;
-      /* prevents padding from affecting height and width */
-      box-sizing: border-box;
-      padding: (12/16rem) (16/16rem);
-      background-color: #fff;
-      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      position: fixed;
-      z-index: 10000;
-
-      &:before {
-        /* black blurred overlay */
-        content: "";
-        width: 0%;
-        height: 100vh;
-        background: rgba(0, 0, 0, 0.6);
-        opacity: 0;
-        display: block;
-        position: absolute;
-        top: 100%;
-        right: 0;
-        z-index: -11;
-        transition:
-          width 0.5s,
-          opacity 0.3s;
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
-      }
-
-      &.active {
-        &:before {
-          width: 100%;
-          opacity: 1;
-        }
-
-        .ul-wrapper {
-          opacity: 1;
-          visibility: visible;
-          transform: scaleX(1);
-          transition-delay: 0.2s;
-        }
-
-        .li {
-          opacity: 1;
-          transform: translateX(0);
-        }
-      }
-
-      .container {
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-      }
-
-      .logo {
-        width: 40%;
-        max-width: (146/16rem);
-        height: 100%;
-        margin: 0 auto 0 0;
-        /* prevents padding from affecting height and width */
-        box-sizing: border-box;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 10;
-
-        img {
-          width: 100%;
-          height: 100%;
-          /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
-          object-fit: contain;
-          /* places the image to the left edge of the parent */
-          object-position: left;
-        }
-      }
-
-      .toggle {
-        /* 44px - 48px */
-        width: clamp(2.75rem, 6vw, 3rem);
-        height: clamp(2.75rem, 6vw, 3rem);
-        margin: 0 0 0 auto;
-        background-color: transparent;
-        border: none;
-        border-radius: (4/16rem);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .active {
-        .line1 {
-          top: 50%;
-          transform: translate(-50%, -50%) rotate(225deg);
-        }
-
-        .line2 {
-          top: 50%;
-          transform: translate(-50%, -50%) translateY(0) rotate(-225deg);
-          transform-origin: center;
-        }
-
-        .line3 {
-          opacity: 0;
-          bottom: 100%;
-        }
-      }
-
-      .box {
-        /* 24px - 28px */
-        width: clamp(1.5rem, 2vw, 1.75rem);
-        /* 14px - 16px */
-        height: clamp(0.875rem, 1.5vw, 1rem);
-        position: relative;
-      }
-
-      .line {
-        width: 100%;
-        height: 2px;
-        background-color: #1a1a1a;
-        border-radius: 2px;
-        position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
-      }
-
-      .line1 {
-        top: 0;
-        transition:
-          transform 0.5s,
-          top 0.3s,
-          left 0.3s;
-        animation-duration: 0.7s;
-        animation-timing-function: ease;
-        animation-direction: normal;
-        animation-fill-mode: forwards;
-        transform-origin: center;
-      }
-
-      .line2 {
-        top: 50%;
-        transform: translateX(-50%) translateY(-50%);
-        transition:
-          top 0.3s,
-          left 0.3s,
-          transform 0.5s;
-        animation-duration: 0.7s;
-        animation-timing-function: ease;
-        animation-direction: normal;
-        animation-fill-mode: forwards;
-      }
-
-      .line3 {
-        bottom: 0;
-        transition:
-          bottom 0.3s,
-          opacity 0.3s;
-      }
-
-      .ul-wrapper {
-        height: 100vh;
-        background-color: #fff;
-        box-shadow: inset rgba(0, 0, 0, 0.2) 0px 8px 24px;
-        opacity: 0;
-        visibility: hidden;
-        position: absolute;
-        top: 100%;
-        right: 0;
-        left: auto;
-        z-index: -1;
-        overflow: hidden;
-        transform: scaleX(0);
-        transition:
-          transform 0.4s,
-          opacity 0.3s;
-        transform-origin: top right;
-      }
-
-      .ul {
-        width: auto;
-        min-width: 40%;
-        height: 65vh;
-        margin: 0;
-        /* 28px - 40px */
-        padding: (48/16rem) clamp(1.75rem, 3vw, 2.5rem) (32/16rem) (70/16rem);
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-end;
-        gap: (20/16rem);
-        overflow: scroll;
-      }
-
-      .li {
-        text-align: right;
-        list-style: none;
-        width: 100%;
-        margin-right: 0;
-        opacity: 0;
-        /* transition from these values */
-        transform: translateX(-40/16rem);
-        transition:
-          transform 0.6s,
-          opacity 0.9s;
-
-        &:nth-of-type(1) {
-          transition-delay: 0.05s;
-        }
-        &:nth-of-type(2) {
-          transition-delay: 0.1s;
-        }
-        &:nth-of-type(3) {
-          transition-delay: 0.15s;
-        }
-        &:nth-of-type(4) {
-          transition-delay: 0.2s;
-        }
-        &:nth-of-type(5) {
-          transition-delay: 0.25s;
-        }
-        &:nth-of-type(6) {
-          transition-delay: 0.3s;
-        }
-        &:nth-of-type(7) {
-          transition-delay: 0.35s;
-        }
-        &:nth-of-type(8) {
-          transition-delay: 0.4s;
-        }
-        &:nth-of-type(9) {
-          transition-delay: 0.45s;
-        }
-      }
-
-      .li-link {
-        /* 16px - 24px */
-        font-size: clamp(1rem, 2.5vw, 1.5rem);
-        color: inherit;
-        line-height: 1.2em;
-        text-decoration: none;
-        margin: 0;
-        display: inline-block;
-        position: relative;
-
-        &:before {
-          /* active state underline */
-          content: "";
-          width: 100%;
-          height: 1px;
-          background: currentColor;
-          opacity: 1;
-          display: none;
-          position: absolute;
-          bottom: (-2/16rem);
-          left: 0;
-        }
-
-        &.active {
-          &:before {
-            display: block;
-          }
-        }
-      }
-
-      .button-solid {
-        display: none;
-      }
-    }
-  }
-
-  /* Dark Mode */
-  @media only screen and (max-width: 63.9375rem) {
-    body.dark-mode {
-      #navigation {
-        background-color: var(--dark);
-
-        .logo {
-          /* makes it white */
-          filter: grayscale(1) brightness(1000%);
-        }
-
-        .line {
-          background-color: #fff;
-        }
-
-        .ul-wrapper {
-          background-color: var(--medium);
-        }
-
-        .li-link {
-          color: var(--bodyTextColorWhite);
-        }
-      }
-    }
-  }
-
-  /*-- -------------------------- -->
-<---     Navigation Dropdown    -->
-<--- -------------------------- -*/
-
-  /* Mobile - 1023px */
-  @media only screen and (max-width: 63.9375rem) {
-    #navigation {
-      .dropdown {
-        color: var(--bodyTextColorWhite);
-        color: var(--headerColor);
-
-        position: relative;
-
-        &.active {
-          .drop-ul {
-            height: auto;
-            margin: (12/16rem) 0 0 0;
-            padding: (24/16rem);
-            opacity: 1;
-            visibility: visible;
-            transform: scale(1);
-          }
-
-          .drop-link {
-            opacity: 1;
-          }
-
-          .drop-icon {
-            transform: rotate(0);
-          }
-        }
-
-        .li-link {
-          position: relative;
-          transition: opacity 0.3s;
-        }
-      }
-
-      .drop-icon {
-        width: (15/16rem);
-        height: auto;
-        display: inline-block;
-        color: inherit;
-        transform: rotate(180deg);
-        transition: 0.3s;
-      }
-
-      .drop-ul {
-        width: 100%;
-        height: 0;
-        margin: 0;
-        box-sizing: border-box;
-        padding: 0 (24/16rem) 0 (24/16rem);
-        background-color: var(--primary);
-        opacity: 0;
-        display: flex;
-        visibility: hidden;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-end;
-        gap: (12/16rem);
-        overflow: hidden;
-        transform: scale(0);
-        transition:
-          padding 0.3s,
-          margin 0.3s,
-          height 0.3s,
-          opacity 0.3s,
-          transform 0.3s,
-          visibility 0.3s;
-        transform-origin: top right;
-      }
-
-      .drop-li {
-        text-align: inherit;
-        list-style: none;
-      }
-
-      .li-link {
-        &.drop-link {
-          /* 14px - 16px */
-          font-size: clamp(0.875rem, 2vw, 1.25rem);
-          color: #fff;
-        }
-      }
-
-      .dropdown-button {
-        background-color: transparent;
-        border: none;
-        appearance: none;
-      }
-    }
-  }
-
-  /* Desktop - 1024px */
-  @media only screen and (min-width: 64rem) {
-    #navigation {
-      .dropdown {
-        position: relative;
-        &:hover,
-        &.active {
-          cursor: pointer;
-          .drop-ul {
-            opacity: 1;
-            visibility: visible;
-            transform: scaleY(1);
-          }
-
-          .drop-li {
-            opacity: 1;
-            transform: translateY(0);
-          }
-        }
-      }
-
-      .dropdown:has(.drop-icon) {
-        display: flex;
-        align-items: center;
-        &:hover {
-          .drop-icon {
-            transform: rotate(0);
-          }
-        }
-      }
-
-      .drop-icon {
-        width: (15/16rem);
-        height: auto;
-        display: inline-block;
-        color: inherit;
-        transform: rotate(180deg);
-        transition: 0.3s;
-      }
-
-      .drop-ul {
-        min-width: (200/16rem);
-        margin: 0;
-        padding: 0;
-        background-color: #fff;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 10px 16px;
-        opacity: 0;
-        border-bottom: 5px solid var(--primary);
-        visibility: hidden;
-        /* if you have 8 or more links in your dropdown nav, uncomment the columns property to make the list into 2 even columns. Change it to 3 or 4 if you need extra columns. Then remove the transition delays on the drop-li so they don't have weird scattered animations */
-        // columns: 2;
-        position: absolute;
-        top: 100%;
-        z-index: -100;
-        overflow: hidden;
-        transform: scaleY(0);
-        transition:
-          transform 0.3s,
-          visibility 0.3s,
-          opacity 0.3s;
-        transform-origin: top;
-      }
-
-      .drop-li {
-        font-size: (16/16rem);
-        text-decoration: none;
-        list-style: none;
-        width: 100%;
-        height: auto;
-        color: var(--bodyTextColor);
-        opacity: 0;
-        display: block;
-        transform: translateY(-10/16rem);
-        transition:
-          opacity 0.6s,
-          transform 0.6s;
-
-        &:nth-of-type(1) {
-          transition-delay: 0.05s;
-        }
-        &:nth-of-type(2) {
-          transition-delay: 0.1s;
-        }
-        &:nth-of-type(3) {
-          transition-delay: 0.15s;
-        }
-        &:nth-of-type(4) {
-          transition-delay: 0.2s;
-        }
-        &:nth-of-type(5) {
-          transition-delay: 0.25s;
-        }
-        &:nth-of-type(6) {
-          transition-delay: 0.3s;
-        }
-        &:nth-of-type(7) {
-          transition-delay: 0.35s;
-        }
-        &:nth-of-type(8) {
-          transition-delay: 0.4s;
-        }
-        &:nth-of-type(9) {
-          transition-delay: 0.45s;
-        }
-        &:nth-of-type(10) {
-          transition-delay: 0.5s;
-        }
-        &:nth-of-type(11) {
-          transition-delay: 0.55s;
-        }
-        &:nth-of-type(12) {
-          transition-delay: 0.6s;
-        }
-        &:nth-of-type(13) {
-          transition-delay: 0.65s;
-        }
-      }
-
-      .li-link {
-        &.drop-link {
-          font-size: (16/16rem);
-          line-height: 1.5em;
-          text-decoration: none;
-          white-space: nowrap;
-          width: 100%;
-          /* prevents padding from affecting height and width */
-          box-sizing: border-box;
-          padding: (12/16rem);
-          color: var(--bodyTextColor);
-          display: block;
-          transition:
-            color 0.3s,
-            background-color 0.3s;
-
-          &:hover {
-            background-color: #f7f7f7;
-          }
-
-          &:focus-within {
-            outline: 2px solid currentColor;
-            outline-offset: -2px;
-          }
-
-          &:before {
-            display: none;
-          }
-        }
-      }
-
-      .dropdown-button {
-        background-color: transparent;
-        border: none;
-        appearance: none;
-      }
-    }
-  }
-
-  /* Dark Mode */
-  @media only screen and (min-width: 0rem) {
-    body.dark-mode {
-      #navigation {
-        .drop-ul {
-          background-color: var(--dark);
-        }
-
-        .li-link {
-          &.drop-link {
-            &:hover {
-              background-color: var(--medium);
-            }
-          }
-        }
-
-        .drop-icon {
-          /* turns it white */
-          filter: grayscale(1) brightness(1000%);
-        }
-      }
-    }
-  }
-
-  /*-- -------------------------- -->
-<---     Desktop Navigation     -->
-<--- -------------------------- -*/
-
-  /* Small Desktop - 1024px */
-  @media only screen and (min-width: 64rem) {
-    #navigation {
-      /* remove the font family so the Stitch inherits the fonts from your global stylesheet */
-      font-family: "Roboto", "Arial", sans-serif;
-      width: 100%;
-      /* prevents padding from affecting height and width */
-      box-sizing: border-box;
-      padding: 0 (16/16rem);
-      background-color: #fff;
-      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      position: fixed;
-      z-index: 10000;
-
-      .container {
-        width: 100%;
-        max-width: (1280/16rem);
-        margin: auto;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        gap: (24/16rem);
-      }
-
-      .toggle {
-        display: none;
-      }
-
-      .logo {
-        width: 18.4%;
-        max-width: (350/16rem);
-        height: (65/16rem);
-        /* margin-right auto pushes everything away from it to the right */
-        margin: 0 auto 0 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 100;
-
-        img {
-          width: 100%;
-          height: 100%;
-          /* ensures the image never overflows the container. It stays contained within it's width and height and expands to fill it then stops once it reaches an edge */
-          object-fit: contain;
-        }
-      }
-
-      .ul {
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        /* 20px - 36px */
-        gap: clamp(1.25rem, 2.6vw, 2.25rem);
-      }
-
-      .li {
-        list-style: none;
-        padding: (32/16rem) 0;
-        /* prevent flexbox from squishing it */
-        flex: none;
-      }
-
-      .li-link {
-        /* 14px - 16px */
-        font-size: clamp(0.875rem, 1vw, 1rem);
-        line-height: 1.5em;
-        text-decoration: none;
-        margin: 0;
-        color: var(--bodyTextColor);
-        display: block;
-        position: relative;
-        &:hover {
-          &:before {
-            width: 100%;
-          }
-        }
-
-        &.active {
-          &:before {
-            width: 100%;
-          }
-        }
-
-        &:before {
-          /* active state underline */
-          content: "";
-          width: 0%;
-          height: 2px;
-          background: var(--primary);
-          opacity: 1;
-          display: block;
-          position: absolute;
-          bottom: (0/16rem);
-          left: 0;
-          transition: width 0.3s;
-        }
-      }
-    }
-  }
-
-  /* Dark Mode */
-  @media only screen and (min-width: 64rem) {
-    body.dark-mode {
-      #navigation {
-        background-color: var(--dark);
-
-        .logo {
-          /* makes it turn white */
-          filter: grayscale(1) brightness(1000%);
-        }
-
-        .li-link {
-          color: var(--bodyTextColorWhite);
-        }
-
-        .li-link {
-          &:before {
-            background-color: var(--primaryLight);
-          }
-        }
-      }
-    }
-  }
-</style>
