(topper) : changed topper to primary color

--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -56,7 +56,7 @@
     line-height: 1.2em;
     text-transform: uppercase;
     letter-spacing: 0.1em;
-    color: var(--secondary);
+    color: var(--primary);
     display: block;
   }
 
