(hero) : parallax scroll bg image changed from optimized img to public img

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import localStylesURL from "@styles/local.less?url";
   <!--                    Hero                      -->
   <!-- ============================================ -->
 
-  <section id="hero-143" style={`--hero-bg-url: url(${optimizedImage?.src})`}>
+  <section id="hero" style={`--hero-bg-url: url(${optimizedImage?.src})`}>
     <div class="container">
       <span class="topper">CodeStitch Presents</span>
       <h1 class="title">Main thing we do with most important keyword phrase</h1>
