--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -760,7 +760,7 @@
     }
 
     .drop-icon {
-      width: calc(15 / 16 * 1rem);
+      width: calc(20 / 16 * 1rem);
       height: auto;
       position: absolute;
       top: 50%;
@@ -833,9 +833,10 @@
     }
 
     .drop-icon {
-      width: calc(15 / 16 * 1rem);
+      width: calc(20 / 16 * 1rem);
       height: auto;
       display: inline-block;
+      vertical-align: top;
     }
 
     .drop-ul {
