(preload) : preload logo

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -88,7 +88,7 @@ const ogImage = preloadedImage?.src || `https://${client.domain}/assets/images/o
          
 
             <!-- Preload key assets -->
-            <!-- <link rel="preload" as="image" href="/assets/images/logo-black.png" /> -->
+            <link rel="preload" as="image" href="/assets/svgs/logo-black.svg" />
             <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin />
             <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin />
       
