--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,6 +44,8 @@ import DarkModeToggle from "@components/DarkModeToggle.astro";
                   // If entry has children in navData.json, create a button and a dropdown icon
                   <span
                     role="button"
+                    tabindex="0"
+                    aria-haspopup="true"
                     aria-expanded="false"
                     aria-controls={`submenu-${entry.key}`}
                     aria-label="dropdown-label"
