(primary) : changed primary color

--- a/src/styles/root.less
+++ b/src/styles/root.less
@@ -5,7 +5,7 @@
 /* CodeStitch Core Styles + Reset */
 @media only screen and (min-width: 0rem) {
   :root {
-    --primary: #ff6a3e;
+    --primary: #c94a4a;
     --primaryLight: #ffba43;
     --secondary: #ffba43;
     --secondaryLight: #ffba43;
