--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -137,7 +137,7 @@
 
         &.active {
           .button {
-            background-color: var(--secondary);
+            background-color: var(--primary);
             color: var(--bodyTextColorWhite);
 
             &:before {
